--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,21 +14,9 @@
   --swiper-pagination-bullet-vertical-gap: 6px;
 }
 
-.bullets-position {
-  position: absolute;
-  left: 50%;
-}
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
-body {
+/* body {
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
 
 /* @layer utilities {
   .text-balance {
