--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "~react-image-gallery/styles/css/image-gallery.css";
+
 :root {
   --swiper-pagination-color: oklch(var(--p));
   --swiper-pagination-bullet-size: 12px;
